AKS_context-based-routing/app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-clusterip-service
  labels:
    app: app2-nginx
spec:
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
      - name: app2-nginx
        image: stacksimplify/kube-nginxapp2:1.0.0
        ports:
        - containerPort: 80
