AKS_context-based-routing/app2clusterIP_SVC.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-clusterip-service
  labels:
    app: app2-nginx 
spec:
  type: ClusterIP
  selector:
    app: app2-nginx
  ports:
  - port: 80
    targetPort: 80
